Document PPDG/src/objects/CorporatePerformance__c.object
<CustomObject>
    <fields>
        <fullName>Additional_External_Funding__c</fullName>
        <label>Additional External Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_External_Fundingx__c</fullName>
        <formula>Additional_External_Funding__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional_External_Fundingx</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTL_Buy_To_Let__c</fullName>
        <label>BTL (Buy To Let)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commercial_Property_Finance__c</fullName>
        <label>Commercial Property Finance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commodity_Murabaha_Deposits__c</fullName>
        <label>Commodity Murabaha Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Account__c</fullName>
        <label>Current Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Saver__c</fullName>
        <label>Direct Saver</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GCC_Finance__c</fullName>
        <label>GCC Finance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_Home_Purchase_Plan__c</fullName>
        <label>HPP (Home Purchase Plan)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Liquid_Asset_Buffer__c</fullName>
        <label>Liquid Asset Buffer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>On_Demand_Savings_Account__c</fullName>
        <label>On Demand Savings Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Liabilities__c</fullName>
        <label>Other Liabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Liabilitiesx__c</fullName>
        <formula>Other_Liabilities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other_Liabilitiesx</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Finance__c</fullName>
        <label>Personal Finance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Treasury_Funding_Line__c</fullName>
        <label>Treasury Funding Line</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wakala_Deposits__c</fullName>
        <label>Wakala Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X120_Day_Notice_Account__c</fullName>
        <label>120 Day Notice Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X120_Day_Notice_Accountxx__c</fullName>
        <formula>X120_Day_Notice_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X120_Day_Notice_Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X12_Month_Fixed_Term_Deposit__c</fullName>
        <label>12 Month Fixed Term Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X12_Month_Fixed_Term_Depositx__c</fullName>
        <formula>X12_Month_Fixed_Term_Deposit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X12_Month_Fixed_Term_Depositx</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X18_Month_Fixed_Term_Deposit__c</fullName>
        <label>18 Month Fixed Term Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X18_Month_Fixed_Term_Depositx__c</fullName>
        <formula>X18_Month_Fixed_Term_Deposit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X18_Month_Fixed_Term_Depositx</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X24_Month_Fixed_Term_Deposit__c</fullName>
        <label>24 Month Fixed Term Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X24_Month_Fixed_Term_Depositx__c</fullName>
        <formula>X24_Month_Fixed_Term_Deposit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X24_Month_Fixed_Term_Depositx</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X60_Day_Notice_Accoun__c</fullName>
        <label>60 Day Notice Accoun</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X60_Day_Notice_Accountx__c</fullName>
        <formula>X60_Day_Notice_Accoun__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X60_Day_Notice_Accountx</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X90_Day_Notice_Account__c</fullName>
        <label>90 Day Notice Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X90_Day_Notice_Accountx__c</fullName>
        <formula>X90_Day_Notice_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X90_Day_Notice_Accountx</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Young_Persons_Notice_Savings_Account__c</fullName>
        <label>Young Persons Notice Savings Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Young_Persons_Savings_Account__c</fullName>
        <label>Young Persons Savings Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Corporate Performance</label>
    <nameField>
        <displayFormat>CPN{0000}</displayFormat>
        <label>CorporatePerformance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporate Performances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>